--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "express": "^4.21.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.484.0",
-    "next": "^15.2.4",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
